Add pooling via hikari